# anchora

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/adversarial/: attacks.json
data/corpus/: cpc-prazos.md  defensoria-publica.md  gratuidade-justica.md  lai.md  lei-8112.md  lgpd.md  licitacoes.md  processo-administrativo.md
data/eval/: holdout-generations.json
data/finetune/: abstention_train.json  instructions-abstention.jsonl  instructions-abstention5.jsonl  instructions.jsonl
data/golden/: golden.json  holdout.json
docs/: architecture.md  blog-post.md  demo.md  eval-calibration.md  finetuning-results.md  linkedin-bullets.md  model-card.md
docs/adr/: 0001-deterministic-lexical-proxies-in-ci.md  0002-local-first-no-paid-apis.md  0003-hand-rolled-rag-over-a-framework.md  0004-hybrid-retrieval-rrf.md  0005-abstention-examples-five-beats-ten.md
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
pipeline/: __init__.py  ml_pipeline.py  sagemaker_pipeline.py
scripts/: ablation_retrieval.py  adversarial_suite.py  benchmark.py  build_finetune_dataset.py  calibrate_judge.py  compare_evals.py  evaluate_finetune.py  finetune_lora.py  gate_promotion.py  register_finetune.py  score_generations.py
src/anchora/: __init__.py  agent.py  chunking.py  cli.py  config.py  embeddings.py  evals.py  guardrails.py  ingest.py  lexical.py  llm.py  metrics.py  observability.py  rag.py  registry.py  store.py  tools.py
src/anchora/api/: __init__.py  main.py
tests/: conftest.py  test_adversarial.py  test_agent.py  test_api.py  test_calibration.py  test_chunking.py  test_cli.py  test_embeddings.py  test_evals.py  test_frozen_eval.py  test_guardrails.py  test_holdout.py  test_ingest.py  test_lexical.py  test_metrics.py  test_observability.py  test_pipeline.py  test_properties.py  test_rag.py  test_registry.py  test_store.py  test_tools.py
