[project]
name = "anchora"
version = "0.4.0"
description = "Domain RAG agent for Brazilian legal/administrative text: cited answers, tool use, evals in CI, LoRA fine-tuning — fully local-first."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Stachlewski Palma" }]
keywords = [
    "rag",
    "llm",
    "agent",
    "ollama",
    "local-first",
    "fastapi",
    "evals",
    "lora",
    "legal-nlp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
# Heavy ML stack — only needed to run the LoRA fine-tune locally/on a GPU.
# Kept out of the core install so the test suite and serving stay light.
finetune = [
    "torch>=2.2",
    "transformers>=4.44",
    "datasets>=2.20",
    "peft>=0.12",
    "accelerate>=0.33",
]

[project.scripts]
anchora = "anchora.cli:main"

[project.urls]
Homepage = "https://github.com/Rodrigo-Palma/anchora"
Repository = "https://github.com/Rodrigo-Palma/anchora"
Issues = "https://github.com/Rodrigo-Palma/anchora/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anchora"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
addopts = "-q --cov=anchora --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.12"
files = ["src", "pipeline", "scripts"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
